# HistoryAIToolkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2023-10-06_Mat.txt  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  print_text_file.py  pyproject.toml  requirements.txt  sampled-2-Martine+Barrat_FINAL.mp3.txt
.github/workflows/: ci-llms.yml  ci.yml  format.yml  lint.yml  update_contributors.yaml
docs/: README_link.md  conf.py  contributing.md  getting-started.md  getting_started.md  index.md  index.rst  requirements.txt
docs/source/: README_link.md  conf.py  getting_started.rst  index.rst
interviewkit/: interview.py  interviewee.py  main.py  sampler.py  settings.py  slicer.py  transcript.py
src/interviewkit/: cli.py  interview.py  interviewee.py  main.py  questions.py  settings.py  slicer.py  transcript.py  transcript_using_m5.py
tests/: test_cli_version.py  test_install_package.py  tests.py
