[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "historyaitoolkit"
version = "0.1.0"
description = "AI toolkit for professional and amateur oral historians"
readme = "README.md"
authors = [
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
maintainers = [
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
    "clarifai_grpc==9.9.1",
    "openai-whisper==20230918",
    "yarl==1.9.2",
    "typer==0.9.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pydub==0.25.1",
    "rich==13.6.0",
    "pathlib==1.0.1",
]

[project.optional-dependencies]
dev = [
    "black",  # code auto-formatting
    "coverage==7.3.2",  # testing
    "mypy",  # linting
    "myst-parser",  # markdown parsing
    "pytest",  # testing
    "ruff",  # linting
    "sphinx",  # documentation
    "pre-commit==3.4.0", # manages and maintains pre-commit hooks
]

test = [
    "pytest",
    # other test dependencies
]

[project.urls]

bugs = "https://github.com/audreyfeldroy/historyaitoolkit/issues"
# TODO: Autogenerate this file following the pattern in Simplicity
changelog = "https://github.com/audreyfeldroy/historyaitoolkit/blob/master/CHANGELOG.md"
homepage = "https://github.com/audreyfeldroy/historyaitoolkit"

[tool.setuptools]
package-dir = {"" = "src"}


[project.scripts]
hist = "interviewkit.cli:app"

# Ruff
# ----

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long - black takes care of this for us
]

[tool.ruff.per-file-ignores]
# Allow unused imports in __init__ files as these are convenience imports
"**/__init__.py" = [ "F401" ]

[tool.ruff.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "project",
    "local-folder",
]

[tool.ruff.isort.sections]
"project" = [
    "src",
    "tests",
]